# flask-demo

./: .environment  .platform.app.yaml  MANIFEST.in  Pipfile  README.md  pyproject.toml
flaskr/: __init__.py  wsgi.py
flaskr/static/: style.css
flaskr/templates/: base.html
tests/: test_blog.py  test_db.py
